<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/metropolis_semibold"
            android:textColor="@color/primaryColor"
            android:textSize="24sp"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/user_icon"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"/>

        <!-- profile email -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sofiapro_regular_italic"
            android:text="@string/profile_email_tag"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/custom_input"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/profile_email"
            android:textSize="14sp"
            android:gravity="center_vertical"/>

        <!-- authentication type -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/sofiapro_regular_italic"
            android:text="@string/profile_authentication_tag"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/profile_provider"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/custom_input"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/profile_authentication_type"
            android:textSize="14sp"
            android:gravity="center_vertical"/>

        <!-- buttons -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">

            <Button
                android:id="@+id/logout_button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/close_session"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:backgroundTint="@color/secondaryColor"/>

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/go_home_button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/go_home"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:backgroundTint="@color/primaryColor"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>