<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal"
            android:background="@color/primaryColor"
            android:layout_below="@id/event_image">

            <!-- event name / element #1-->

            <TextView
                android:id="@+id/card_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:layout_weight="1"
                android:fontFamily="@font/metropolis_semibold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="8dp"
                android:layout_gravity="center_vertical"/>

            <!-- event info / element #2-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginVertical="8dp">

                <!-- date -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/card_event_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_date"
                        android:textColor="@color/white"
                        android:fontFamily="@font/sofiapro_regular_italic"
                        android:textSize="9sp"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <!-- location -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/card_event_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_event_location"
                        android:textColor="@color/white"
                        android:fontFamily="@font/sofiapro_regular_italic"
                        android:textSize="9sp"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>